NetworkPolicies/busybox-prod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-prod
  labels:
    app: busybox-prod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"] #pour laisser le pod actif pendant une heure
