NetworkPolicies/NP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
spec:
  podSelector:
   matchLabels:
    app: nginx
  policyTypes:
  - Ingress
  ingress:  
  - from:
      - podSelector:
          matchLabels:
            app: busybox-dev
